[gd_scene load_steps=27 format=2]

[ext_resource path="res://sprites/screens/player_room/RoomTiles.png" type="Texture" id=1]
[ext_resource path="res://src/characters/player/Player.tscn" type="PackedScene" id=2]
[ext_resource path="res://src/shaders/palette/Palette.tscn" type="PackedScene" id=3]
[ext_resource path="res://sprites/screens/player_room/BorderTiles.png" type="Texture" id=4]
[ext_resource path="res://sprites/screens/player_room/LightBulb.png" type="Texture" id=5]
[ext_resource path="res://src/screens/player_room/PlayerRoom.gd" type="Script" id=6]
[ext_resource path="res://sprites/screens/player_room/Plant.png" type="Texture" id=7]
[ext_resource path="res://src/ui/dialog/Dialog.tscn" type="PackedScene" id=8]
[ext_resource path="res://sprites/screens/player_room/Computer.png" type="Texture" id=9]
[ext_resource path="res://sprites/screens/player_room/Shelf.png" type="Texture" id=10]
[ext_resource path="res://src/ui/question/Question.tscn" type="PackedScene" id=11]

[sub_resource type="ConvexPolygonShape2D" id=1]
points = PoolVector2Array( 0, 0, 14, 0, 14, 14, 0, 14 )

[sub_resource type="ConvexPolygonShape2D" id=2]
points = PoolVector2Array( 0, 0, 14, 0, 14, 14, 0, 14 )

[sub_resource type="ConvexPolygonShape2D" id=3]
points = PoolVector2Array( 0, 0, 14, 0, 14, 14, 0, 14 )

[sub_resource type="ConvexPolygonShape2D" id=4]
points = PoolVector2Array( 0, 0, 14, 0, 14, 14, 0, 14 )

[sub_resource type="ConvexPolygonShape2D" id=5]
points = PoolVector2Array( 0, 0, 14, 0, 14, 14, 0, 14 )

[sub_resource type="ConvexPolygonShape2D" id=6]
points = PoolVector2Array( 0, 0, 14, 0, 14, 14, 0, 14 )

[sub_resource type="ConvexPolygonShape2D" id=7]
points = PoolVector2Array( 0, 0, 14, 0, 14, 14, 0, 14 )

[sub_resource type="ConvexPolygonShape2D" id=8]
points = PoolVector2Array( 0, 0, 14, 0, 14, 14, 0, 14 )

[sub_resource type="ConvexPolygonShape2D" id=9]
points = PoolVector2Array( 0, 0, 14, 0, 14, 14, 0, 14 )

[sub_resource type="ConvexPolygonShape2D" id=10]
points = PoolVector2Array( 0, 0, 14, 0, 14, 14, 0, 14 )

[sub_resource type="TileSet" id=11]
0/name = "IndoorTiles.png 0"
0/texture = ExtResource( 1 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 14, 14 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shapes = [  ]
0/z_index = 0
1/name = "IndoorTiles.png 1"
1/texture = ExtResource( 1 )
1/tex_offset = Vector2( 0, 0 )
1/modulate = Color( 1, 1, 1, 1 )
1/region = Rect2( 14, 0, 14, 14 )
1/tile_mode = 0
1/occluder_offset = Vector2( 0, 0 )
1/navigation_offset = Vector2( 0, 0 )
1/shapes = [  ]
1/z_index = 0
2/name = "IndoorTiles.png 2"
2/texture = ExtResource( 1 )
2/tex_offset = Vector2( 0, 0 )
2/modulate = Color( 1, 1, 1, 1 )
2/region = Rect2( 28, 0, 14, 14 )
2/tile_mode = 0
2/occluder_offset = Vector2( 0, 0 )
2/navigation_offset = Vector2( 0, 0 )
2/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 4 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
2/z_index = 0
3/name = "IndoorTiles.png 3"
3/texture = ExtResource( 1 )
3/tex_offset = Vector2( 0, 0 )
3/modulate = Color( 1, 1, 1, 1 )
3/region = Rect2( 42, 0, 14, 14 )
3/tile_mode = 0
3/occluder_offset = Vector2( 0, 0 )
3/navigation_offset = Vector2( 0, 0 )
3/shapes = [  ]
3/z_index = 0
4/name = "IndoorTiles.png 4"
4/texture = ExtResource( 1 )
4/tex_offset = Vector2( 0, 0 )
4/modulate = Color( 1, 1, 1, 1 )
4/region = Rect2( 56, 0, 14, 14 )
4/tile_mode = 0
4/occluder_offset = Vector2( 0, 0 )
4/navigation_offset = Vector2( 0, 0 )
4/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 5 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
4/z_index = 0
5/name = "BorderTiles.png 5"
5/texture = ExtResource( 4 )
5/tex_offset = Vector2( 0, 0 )
5/modulate = Color( 1, 1, 1, 1 )
5/region = Rect2( 0, 0, 14, 14 )
5/tile_mode = 0
5/occluder_offset = Vector2( 0, 0 )
5/navigation_offset = Vector2( 0, 0 )
5/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 6 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
5/z_index = 0
6/name = "BorderTiles.png 6"
6/texture = ExtResource( 4 )
6/tex_offset = Vector2( 0, 0 )
6/modulate = Color( 1, 1, 1, 1 )
6/region = Rect2( 14, 0, 14, 14 )
6/tile_mode = 0
6/occluder_offset = Vector2( 0, 0 )
6/navigation_offset = Vector2( 0, 0 )
6/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 7 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
6/z_index = 0
7/name = "BorderTiles.png 7"
7/texture = ExtResource( 4 )
7/tex_offset = Vector2( 0, 0 )
7/modulate = Color( 1, 1, 1, 1 )
7/region = Rect2( 28, 0, 14, 14 )
7/tile_mode = 0
7/occluder_offset = Vector2( 0, 0 )
7/navigation_offset = Vector2( 0, 0 )
7/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 8 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
7/z_index = 0
8/name = "BorderTiles.png 8"
8/texture = ExtResource( 4 )
8/tex_offset = Vector2( 0, 0 )
8/modulate = Color( 1, 1, 1, 1 )
8/region = Rect2( 0, 14, 14, 14 )
8/tile_mode = 0
8/occluder_offset = Vector2( 0, 0 )
8/navigation_offset = Vector2( 0, 0 )
8/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 9 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
8/z_index = 0
9/name = "BorderTiles.png 9"
9/texture = ExtResource( 4 )
9/tex_offset = Vector2( 0, 0 )
9/modulate = Color( 1, 1, 1, 1 )
9/region = Rect2( 28, 14, 14, 14 )
9/tile_mode = 0
9/occluder_offset = Vector2( 0, 0 )
9/navigation_offset = Vector2( 0, 0 )
9/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 10 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
9/z_index = 0
10/name = "BorderTiles.png 10"
10/texture = ExtResource( 4 )
10/tex_offset = Vector2( 0, 0 )
10/modulate = Color( 1, 1, 1, 1 )
10/region = Rect2( 0, 28, 14, 14 )
10/tile_mode = 0
10/occluder_offset = Vector2( 0, 0 )
10/navigation_offset = Vector2( 0, 0 )
10/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 1 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
10/z_index = 0
11/name = "BorderTiles.png 11"
11/texture = ExtResource( 4 )
11/tex_offset = Vector2( 0, 0 )
11/modulate = Color( 1, 1, 1, 1 )
11/region = Rect2( 14, 28, 14, 14 )
11/tile_mode = 0
11/occluder_offset = Vector2( 0, 0 )
11/navigation_offset = Vector2( 0, 0 )
11/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 2 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
11/z_index = 0
12/name = "BorderTiles.png 12"
12/texture = ExtResource( 4 )
12/tex_offset = Vector2( 0, 0 )
12/modulate = Color( 1, 1, 1, 1 )
12/region = Rect2( 28, 28, 14, 14 )
12/tile_mode = 0
12/occluder_offset = Vector2( 0, 0 )
12/navigation_offset = Vector2( 0, 0 )
12/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 3 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
12/z_index = 0
13/name = "RoomTiles.png 13"
13/texture = ExtResource( 1 )
13/tex_offset = Vector2( 0, 0 )
13/modulate = Color( 1, 1, 1, 1 )
13/region = Rect2( 70, 0, 14, 14 )
13/tile_mode = 0
13/occluder_offset = Vector2( 0, 0 )
13/navigation_offset = Vector2( 0, 0 )
13/shapes = [  ]
13/z_index = 0
14/name = "RoomTiles.png 14"
14/texture = ExtResource( 1 )
14/tex_offset = Vector2( 0, 0 )
14/modulate = Color( 1, 1, 1, 1 )
14/region = Rect2( 84, 0, 14, 14 )
14/tile_mode = 0
14/occluder_offset = Vector2( 0, 0 )
14/navigation_offset = Vector2( 0, 0 )
14/shapes = [  ]
14/z_index = 0
15/name = "RoomTiles.png 15"
15/texture = ExtResource( 1 )
15/tex_offset = Vector2( 0, 0 )
15/modulate = Color( 1, 1, 1, 1 )
15/region = Rect2( 98, 0, 14, 14 )
15/tile_mode = 0
15/occluder_offset = Vector2( 0, 0 )
15/navigation_offset = Vector2( 0, 0 )
15/shapes = [  ]
15/z_index = 0
16/name = "RoomTiles.png 16"
16/texture = ExtResource( 1 )
16/tex_offset = Vector2( 0, 0 )
16/modulate = Color( 1, 1, 1, 1 )
16/region = Rect2( 112, 0, 14, 14 )
16/tile_mode = 0
16/occluder_offset = Vector2( 0, 0 )
16/navigation_offset = Vector2( 0, 0 )
16/shapes = [  ]
16/z_index = 0
17/name = "RoomTiles.png 17"
17/texture = ExtResource( 1 )
17/tex_offset = Vector2( 0, 0 )
17/modulate = Color( 1, 1, 1, 1 )
17/region = Rect2( 126, 0, 14, 14 )
17/tile_mode = 0
17/occluder_offset = Vector2( 0, 0 )
17/navigation_offset = Vector2( 0, 0 )
17/shapes = [  ]
17/z_index = 0
18/name = "RoomTiles.png 18"
18/texture = ExtResource( 1 )
18/tex_offset = Vector2( 0, 0 )
18/modulate = Color( 1, 1, 1, 1 )
18/region = Rect2( 140, 0, 14, 14 )
18/tile_mode = 0
18/occluder_offset = Vector2( 0, 0 )
18/navigation_offset = Vector2( 0, 0 )
18/shapes = [  ]
18/z_index = 0

[sub_resource type="RectangleShape2D" id=12]
extents = Vector2( 8, 7 )

[sub_resource type="RectangleShape2D" id=13]
extents = Vector2( 17, 10 )

[sub_resource type="RectangleShape2D" id=14]
extents = Vector2( 14, 21 )

[sub_resource type="RectangleShape2D" id=15]

[node name="PlayerRoom" type="Node2D"]
script = ExtResource( 6 )
start_in_darkness = false

[node name="Palette" parent="." instance=ExtResource( 3 )]
is_enabled = false

[node name="Background" type="ColorRect" parent="."]
margin_right = 280.0
margin_bottom = 210.0
rect_min_size = Vector2( 280, 210 )
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="TileMap" type="TileMap" parent="."]
tile_set = SubResource( 11 )
cell_size = Vector2( 14, 14 )
format = 1
tile_data = PoolIntArray( 196613, 5, 0, 196614, 6, 0, 196615, 6, 0, 196616, 6, 0, 196617, 6, 0, 196618, 6, 0, 196619, 6, 0, 196620, 6, 0, 196621, 6, 0, 196622, 7, 0, 262149, 8, 0, 262150, 4, 0, 262151, 4, 0, 262152, 4, 0, 262153, 4, 0, 262154, 4, 0, 262155, 4, 0, 262156, 4, 0, 262157, 4, 0, 262158, 9, 0, 327685, 8, 0, 327686, 4, 0, 327687, 4, 0, 327688, 4, 0, 327689, 4, 0, 327690, 4, 0, 327691, 4, 0, 327692, 4, 0, 327693, 4, 0, 327694, 9, 0, 393221, 8, 0, 393222, 4, 0, 393223, 4, 0, 393224, 4, 0, 393225, 4, 0, 393226, 4, 0, 393227, 4, 0, 393228, 4, 0, 393229, 4, 0, 393230, 9, 0, 458757, 8, 0, 458758, 3, 0, 458759, 3, 0, 458760, 3, 0, 458761, 3, 0, 458762, 3, 0, 458763, 3, 0, 458764, 3, 0, 458765, 3, 0, 458766, 9, 0, 524293, 8, 0, 524294, 3, 0, 524295, 3, 0, 524296, 3, 0, 524297, 3, 0, 524298, 3, 0, 524299, 3, 0, 524300, 3, 0, 524301, 3, 0, 524302, 9, 0, 589829, 8, 0, 589830, 17, 0, 589831, 17, 0, 589832, 3, 0, 589833, 3, 0, 589834, 3, 0, 589835, 3, 0, 589836, 3, 0, 589837, 3, 0, 589838, 9, 0, 655365, 8, 0, 655366, 17, 0, 655367, 17, 0, 655368, 3, 0, 655369, 3, 0, 655370, 3, 0, 655371, 3, 0, 655372, 3, 0, 655373, 3, 0, 655374, 9, 0, 720901, 10, 0, 720902, 11, 0, 720903, 11, 0, 720904, 11, 0, 720905, 11, 0, 720906, 11, 0, 720907, 11, 0, 720908, 11, 0, 720909, 11, 0, 720910, 12, 0 )
__meta__ = {
"_edit_lock_": true
}

[node name="YSort" type="YSort" parent="."]

[node name="Player" parent="YSort" instance=ExtResource( 2 )]
position = Vector2( 140, 140 )

[node name="Plant" type="Sprite" parent="YSort"]
position = Vector2( 98, 140 )
texture = ExtResource( 7 )
__meta__ = {
"_edit_group_": true
}

[node name="Dialog" parent="YSort/Plant" instance=ExtResource( 8 )]
dialog = "Upon close study, the leaves reveal a synthetic sheen."

[node name="StaticBody2D" type="StaticBody2D" parent="YSort/Plant"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="YSort/Plant/StaticBody2D"]
position = Vector2( -1, 6 )
shape = SubResource( 12 )

[node name="Computer" type="Sprite" parent="YSort"]
position = Vector2( 108, 93 )
texture = ExtResource( 9 )
__meta__ = {
"_edit_group_": true
}

[node name="Question" parent="YSort/Computer" instance=ExtResource( 11 )]
initial_text = "It's your old computer."
question = "Turn it on?"
yes_response = "Booting up."
no_response = "Maybe some other time."

[node name="StaticBody2D" type="StaticBody2D" parent="YSort/Computer"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="YSort/Computer/StaticBody2D"]
position = Vector2( 0, 2 )
shape = SubResource( 13 )

[node name="Shelf" type="Sprite" parent="YSort"]
position = Vector2( 176, 90 )
texture = ExtResource( 10 )
__meta__ = {
"_edit_group_": true
}

[node name="Dialog" parent="YSort/Shelf" instance=ExtResource( 8 )]
dialog = "It's a shelf!"

[node name="StaticBody2D" type="StaticBody2D" parent="YSort/Shelf"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="YSort/Shelf/StaticBody2D"]
shape = SubResource( 14 )

[node name="LightBulb" type="Sprite" parent="."]
position = Vector2( 140, 110 )
texture = ExtResource( 5 )
hframes = 3
frame = 2
__meta__ = {
"_edit_group_": true
}

[node name="Line2D" type="Line2D" parent="LightBulb"]
position = Vector2( -140, -110 )
points = PoolVector2Array( 139, 56, 139, 103 )
width = 1.0
default_color = Color( 0, 0, 0, 1 )

[node name="LightArea" type="Area2D" parent="LightBulb"]
position = Vector2( 0, 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="LightBulb/LightArea"]
shape = SubResource( 15 )
[connection signal="interacted" from="YSort/Player" to="." method="_on_Player_interacted"]
